--- a/packages/index.css
+++ b/packages/index.css
@@ -403,8 +403,8 @@ This means that something using bottom is off the page - hence we must use top. 
 	max-width: calc(var(--vh) * 12);
 	max-height: 12vh;
 	max-height: calc(var(--vh) * 12);
-	margin-right: 2vw;
-	margin-right: calc(var(--vw) * 2);
+	margin-right: 3vw;
+	margin-right: calc(var(--vw) * 3);
 	margin-top: 2vh;
 	margin-top: calc(var(--vh) * 2);
 }
@@ -415,8 +415,8 @@ This means that something using bottom is off the page - hence we must use top. 
 	min-width: 12vw;
 	min-width: calc(var(--vw) * 12);
 	text-align: center;
-	right: 9.52vh;
-	right: calc(var(--vh) * 9.52);
+	right: calc(9.52vh + 1vw);
+	right: calc(calc(var(--vh) * 9.52) + calc(var(--vw) * 1));
 	top: 26vh;
 	top: calc(var(--vh) * 26);
 }
@@ -430,8 +430,8 @@ This means that something using bottom is off the page - hence we must use top. 
 	font-size: 1.2vw;
 	font-size: calc(var(--vw) * 1.2);
 	transform: rotate(270deg);
-	right: calc(9.52vh + 8vw);
-	right: calc(calc(var(--vh) * 9.52) + calc(var(--vw) * 8));
+	right: calc(9.52vh + 9vw);
+	right: calc(calc(var(--vh) * 9.52) + calc(var(--vw) * 9));
 	top: 19vh;
 	top: calc(var(--vh) * 19);
 }
@@ -442,8 +442,8 @@ This means that something using bottom is off the page - hence we must use top. 
 	min-width: 12vw;
 	min-width: calc(var(--vw) * 12);
 	text-align: center;
-	right: 9.52vh;
-	right: calc(var(--vh) * 9.52);
+	right: calc(9.52vh + 1vw);
+	right: calc(calc(var(--vh) * 9.52) + calc(var(--vw) * 1));
 	top: 12vh;
 	top: calc(var(--vh) * 12);
 }
@@ -457,8 +457,8 @@ This means that something using bottom is off the page - hence we must use top. 
 	font-size: 1.2vw;
 	font-size: calc(var(--vw) * 1.2);
 	transform: rotate(90deg);
-	right: 4.52vh;
-	right: calc(var(--vh) * 4.52);
+	right: calc(4.52vh + 1vw);
+	right: calc(calc(var(--vh) * 4.52) + calc(var(--vw) * 1));
 	top: 19vh;
 	top: calc(var(--vh) * 19);
 }
